--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>0.9.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.warrenstrange</groupId>
+            <artifactId>googleauth</artifactId>
+            <version>1.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
